[package]
name = "codecrafters-git"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2024"
rust-version = "1.91"

[dependencies]
anyhow = "1"                                # error handling
bytes = "1"                                  # helps manage buffers
flate2 = "1"                                # compression
thiserror = "2"                             # error handling
clap = { version = "4", features = ["derive"] }
